--- a/color_game_project/colorGame.css
+++ b/color_game_project/colorGame.css
@@ -1,5 +1,7 @@
 body {
     background-color: #232323;
+    margin: 0%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .square {
@@ -8,19 +10,68 @@ body {
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 10%;
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
 #container {
     margin: 0 auto;
     max-width: 600px;
+    padding-top: 10px;
 }
 
 h1 {
     text-align: center;
     color: white;
+    background-color: steelblue;
+    margin: 0%;
+    font-weight: normal;
+    text-transform: uppercase;
+    padding: 20px 0;
+}
+
+#colorDisplay {
+    font-size: 150%;
+}
+
+#stripe {
+    background: white;
+    height: 38px;
+    text-align: center;
+    color: black;
+}
+
+.selected {
+    background: steelblue;
+}
+
+button {
+    border: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: inherit;
+    color: steelblue;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+}
+
+button:hover {
+    color: white;
+    background: rgb(70, 130, 180, 0.5);
+}
+
+#hard {
+    color: white;
 }
 
 #message {
-    color: white;
-    text-align: center;
+    display: inline-block;
+    width: 20%;
 }
